Add web manifest declaration

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="keywords" content="language, words, trainer, web, android, ios, desktop, pwa, mobile">
 <meta name="author" content="Sergei Kobzev">
 <meta name="application-name" content="Düğünümüz">
+<link rel="manifest" href="site.webmanifest" />
 <noscript>JavaScript is required</noscript>
 <link rel="preload" as="fetch" crossorigin="anonymous" href="/_payload.json?949f7641-e4a9-4358-a8f2-251c1aaf267d">
 <style>body,html{height:100%;margin:0}body{background-color:#fff;color:#17130f;font-family:Roboto,sans-serif;height:100%;line-height:1.1}@media (max-width:480px){body{overflow:hidden}}select{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:transparent;border:none;font-family:inherit;margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-variant:small-caps;margin:0}</style>
